Fixed overflow in card

--- a/css/theme-1.css
+++ b/css/theme-1.css
@@ -42,6 +42,7 @@ body {
 }
 
 .socials {
+    width: 40%;
     position: relative;
     left: 600px;
     top: 150px;
